Update: Customized the scroll thumb and track (colours)

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
 
-        <div class="chats">
+        <div class="chats" id="chats">
             <a href="#"><div class="chat1">
                 <div class="img1"><img src="https://media-lhr8-1.cdn.whatsapp.net/v/t61.24694-24/354447275_228492693320907_5186296765973954399_n.jpg?stp=dst-jpg_s96x96&ccb=11-4&oh=01_Q5AaIJ6BVfNChNqixYiifVnqafgB7n8ED38PXMmgWNClj0tF&oe=66A72D77&_nc_sid=e6ed6c&_nc_cat=111" alt=""></div>
 
